# auto-hf-papers

./: README.md  SKILL.md  pyproject.toml
.github/workflows/: daily-digest.yml
app/: __init__.py  __main__.py  clients.py  logic.py  models.py  render.py  run.py
config/: config-schema.json
prompts/: digest-intro.md  summarize-paper.md  translate.md
scripts/: deliver.js  fetch-papers.js  generate-digest.js  package.json  send-digest.sh
tests/: test_daily_papers.py
