[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-hf-papers"
version = "0.1.0"
description = "Generate a daily Markdown digest from Hugging Face Daily Papers."
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["app"]
